# vulkan-raytracing-rs

./: Cargo.toml  README.md
assets/shaders/: shader.frag.spv  shader.vert  shader.vert.spv
assets/shaders/basic/: closesthit.rchit.spv
assets/shaders/shadows/: raygen.rgen.spv
assets/shaders/triangle/: raygen.rgen.spv
crates/examples/: Cargo.toml
crates/examples/assets/shaders/shadows/: closesthit.rchit  closesthit.rchit.spv  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  shadow.rmiss.spv
crates/examples/assets/shaders/triangle/: raygen.rgen
crates/examples/reflections/: Cargo.toml
crates/examples/reflections/shaders/: closesthit.rchit.spv  miss.rmiss.spv  raygen.rgen.spv
crates/examples/reflections/src/: main.rs
crates/examples/shadows/: Cargo.toml
crates/examples/shadows/shaders/: closesthit.rchit.spv
crates/examples/shadows/src/: main.rs
crates/examples/triangle_advanced/: Cargo.toml
crates/examples/triangle_advanced/shaders/: raygen.rgen.spv
crates/examples/triangle_advanced/src/: main.rs
crates/examples/triangle_basic/: Cargo.toml
crates/examples/triangle_basic/src/: main.rs
crates/libs/app/: Cargo.toml
crates/libs/app/src/: lib.rs
crates/libs/gltf/: Cargo.toml
crates/libs/gltf/src/: lib.rs  material.rs
crates/libs/gui/: Cargo.toml
crates/libs/gui/src/: lib.rs
crates/libs/vulkan/: Cargo.toml
crates/libs/vulkan/src/: command.rs  context.rs  descriptor.rs  device.rs  framebuffer.rs  instance.rs  lib.rs  physical_device.rs  queue.rs  render_pass.rs  swapchain.rs
crates/libs/vulkan/src/pipeline/: mod.rs  shader.rs
crates/libs/vulkan/src/ray_tracing/: acceleration_structure.rs  shader_binding_table.rs
scripts/: compile_shaders.ps1  compile_shaders.sh  debug.ps1  debug.sh  run.ps1  run.sh
src/: main.rs
