[package]
name = "vulkan-raytracing-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11"
anyhow = "1.0"
ash = { version = "0.35", features = ["linked"] }
ash-window = "0.9"
gpu-allocator = { version = "0.15", default-features = false, features = ["vulkan"] }
winit = "0.26"
