[package]
name = "vulkan-raytracing-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11"
anyhow = "1.0"
winit = "0.26"
glam = "0.20"

vulkan = { path = "../libs/vulkan" }
gltf = { path = "../libs/gltf" }
gui = { path = "../libs/gui" }
