[package]
name = "shadows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
glam = "0.20"

app = { path = "../../libs/app" }
vulkan = { path = "../../libs/vulkan" }
gltf = { path = "../../libs/gltf" }
gui = { path = "../../libs/gui" }
