[package]
name = "triangle_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "2.1"
anyhow = "1.0"
winit = "0.26"
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.10"
gpu-allocator = { version = "0.18", default-features = false, features = ["vulkan"] }
